Add mapping between bugzilla labels (priority, severity) and gh issues. Save depends, blocks, cc, and attachment info in first comment.

--- a/test.cfg
+++ b/test.cfg
@@ -3,10 +3,22 @@ organization = bandre-ucar
 repository = junk-issues
 description = 'junk repo to test bugzilla migration'
 gitignore_template = 'Python'
-milestones = test-milestone
-labels = test-label
+milestones = clm5, future
+labels = critical, low priority, high priority
 
 [bugzilla]
 xml_bug_list = test-data.xml
 
 
+[label_map]
+major = critical
+critical = critical
+blocker = critical
+enhancement = enhancement
+P4 = low priority
+P5 = low priority
+P1 = high priority
+
+[milestone_map]
+clm5 = clm5
+future = future
